tests/fails/nilsym.t
require("fail")
terra foo()
	var [what] : int = 4
end
